--- a/index.html
+++ b/index.html
@@ -5,26 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checker &mdash; заучивание информации</title>
-
-  <link rel="stylesheet" href="https://unpkg.com/open-props" />
-
-  <!-- optional imports that use the props -->
-  <link rel="stylesheet" href="https://unpkg.com/open-props/normalize.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/open-props/buttons.min.css" />
-
-  <!-- individual imports -->
-  <link rel="stylesheet" href="https://unpkg.com/open-props/indigo.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/open-props/indigo-hsl.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/open-props/easings.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/open-props/animations.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/open-props/sizes.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/open-props/gradients.min.css" />
+  <link rel="stylesheet" href="/styles/open-props.min.css" />
   <meta name="color-scheme" content="dark light">
-  <link rel="stylesheet" href="custom.css">
+  <link rel="stylesheet" href="/styles/normalize.min.css" />
+  <link rel="stylesheet" href="/styles/buttons.min.css" />
+  <link rel="stylesheet" href="/styles/indigo-hsl.min.css" />
+  <link rel="stylesheet" href="/styles/indigo-hsl.min.css" />
+  <link rel="stylesheet" href="/styles/easings.min.css" />
+  <link rel="stylesheet" href="/styles/animations.min.css" />
+  <link rel="stylesheet" href="/styles/sizes.min.css" />
+  <link rel="stylesheet" href="/styles/gradients.min.css" />
 
+  <link rel="stylesheet" href="/styles/custom.css">
 
-  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/pouchdb@7.x.x/dist/pouchdb.min.js"></script>
+  <script src="/vendor/cdn.min.js" defer></script>
+  <script src="/vendor/pouchdb.min.js"></script>
 
 </head>
 
